# organizer

./: .appveyor.yml  .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CODE_OF_CONDUCT.md  NOTICE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: build.yml  docs.yml
cli/: index.html
configuration/: profile.html  rule.html
configuration/actions/: delete.html  hard-link.html  index.html  move.html  multiple.html  process.html  rename.html  shortcut.html  symbolic-link.html  trash.html
configuration/conditions/: comparator.html  created.html  filename.html  filesize.html  index.html  last-modified.html  loader.html
docs/: index.md
docs/cli/: index.md
docs/configuration/: profile.md  rule.md
docs/configuration/actions/: delete.md  hard-link.md  index.md  move.md  multiple.md  process.md  rename.md  shortcut.md  symbolic-link.md  trash.md
docs/configuration/conditions/: comparator.md  created.md  filename.md  filesize.md  index.md  last-modified.md  loader.md
resources/: resources.qrc
search/: search_index.json
setup/: setup.iss
src/: CMakeLists.txt  README.md  main-window.cpp  main-window.h  main-window.ui  main.cpp
src/actions/: action-loader.cpp  action-loader.h  action.cpp  action.h  move-action.cpp  move-action.h  multiple-action.cpp  multiple-action.h  process-action.cpp  process-action.h  rename-action.cpp  rename-action.h
src/cli/: CMakeLists.txt
src/cli/src/: cli.cpp  cli.h  main.cpp
src/cli/tests/: cli-test.cpp
src/drop/: CMakeLists.txt
src/drop/resources/: resources.qrc
src/drop/src/: command-window.cpp  command-window.h  command-window.ui  conflict-window.cpp  conflict-window.h  conflict-window.ui  drop-window.cpp  drop-window.h  drop-window.ui  main.cpp
src/drop/tests/: conflict-window-test.cpp
src/gui/: CMakeLists.txt
src/gui/resources/: icon.rc  resources.qrc
src/gui/src/: main-window.cpp  main-window.h  main-window.ui  main.cpp
src/gui/src/players/: gif-player.cpp  gif-player.h  gif-player.ui  image-player.cpp  player-widget.cpp  player-widget.ui  player.h  video-player.cpp  video-player.h
src/gui/tests/: custom-url-handler.cpp  main-window-test.cpp  main.cpp
src/gui/tests/players/: gif-player-test.cpp  video-player-test.cpp
src/lib/: CMakeLists.txt  README.md
src/lib/src/: media.cpp  media.h  profile-loader.cpp  profile-loader.h  profile.cpp  profile.h  rule-loader.cpp  rule-loader.h  rule.cpp  rule.h
src/lib/src/actions/: action-loader.cpp  action-loader.h  action.cpp  action.h  delete-action.cpp  delete-action.h  hard-link-action.cpp  hard-link-action.h  move-action.cpp  move-action.h  multiple-action.cpp  multiple-action.h  process-action.cpp  process-action.h  rename-action.cpp  rename-action.h  shortcut-action.cpp  shortcut-action.h  symbolic-link-action.cpp  symbolic-link-action.h  trash-action.cpp  trash-action.h
src/lib/src/conditions/: condition-loader.cpp  condition-loader.h  condition.cpp  condition.h  created-condition.cpp  created-condition.h  filename-condition.cpp  filename-condition.h  filesize-condition.cpp  filesize-condition.h  last-modified-condition.cpp  last-modified-condition.h
src/lib/src/conditions/comparators/: and-comparator.cpp  and-comparator.h  comparator.h  glob-comparator.cpp  glob-comparator.h  or-comparator.cpp  or-comparator.h  range-comparator.cpp  range-comparator.h  regex-comparator.cpp  regex-comparator.h
src/lib/src/conditions/loaders/: created-loader.cpp  created-loader.h  directory-loader.cpp  directory-loader.h  filename-loader.cpp  filename-loader.h  filesize-loader.cpp  filesize-loader.h  last-modified-loader.cpp  last-modified-loader.h  loader.h  path-loader.cpp  path-loader.h
src/lib/src/filesystem/: filesystem.h  real-filesystem.cpp  real-filesystem.h  simulated-filesystem.cpp  simulated-filesystem.h
src/lib/src/rules/: rule-loader.cpp  rule-loader.h  rule.cpp  rule.h
src/lib/tests/: main.cpp  media-test.cpp  profile-loader-test.cpp  profile-test.cpp
src/lib/tests/actions/: action-loader-test.cpp  delete-action-test.cpp  hard-link-action-test.cpp  move-action-test.cpp  multiple-action-test.cpp  process-action-test.cpp  rename-action-test.cpp  shortcut-action-test.cpp  symbolic-link-action-test.cpp  trash-action-test.cpp
src/lib/tests/conditions/: condition-loader-test.cpp  created-condition-test.cpp  filename-condition-test.cpp  filesize-condition-test.cpp  last-modified-condition-test.cpp
src/lib/tests/conditions/comparators/: and-comparator-test.cpp  glob-comparator-test.cpp  or-comparator-test.cpp  range-comparator-test.cpp  regex-comparator-test.cpp
src/lib/tests/conditions/loaders/: created-loader-test.cpp  directory-loader-test.cpp  filename-loader-test.cpp  filesize-loader-test.cpp  last-modified-loader-test.cpp  path-loader-test.cpp
src/lib/tests/rules/: rule-loader-test.cpp  rule-test.cpp
src/players/: gif-player.cpp  gif-player.h  gif-player.ui  image-player.cpp  image-player.h  image-player.ui  player.h  video-player.cpp  video-player.h  video-player.ui
src/tests/: CMakeLists.txt
src/tests/src/: custom-url-handler.h  test-utils.cpp  test-utils.cxx  test-utils.h
src/widgets/: CMakeLists.txt
src/widgets/src/players/: gif-player.cpp  gif-player.ui  image-player.h  image-player.ui  player-widget.h  player.cpp  video-player.ui
src/widgets/tests/players/: image-player-test.cpp
